--- a/producto/dermo-clean-foam.html
+++ b/producto/dermo-clean-foam.html
@@ -159,10 +159,11 @@
                             espuma especialmente
                             diseñada para limpiar de forma adecuada la piel, calmar la irritación, refrescar y remover
                             los excesos de pigmento de forma efectiva evitando que los colores se mezclen, recomendada
-                            también para el afeitado de la piel antes de tatuar..</p>
+                            también para el afeitado de la piel antes de tatuar.</p>
                     </div>
                     <div class="row">
-                        <a href="/producto/tattoo-aftercare.html"><button type="button"
+                        <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-espuma-dermolimpiadora--ecorecarga/up/MLMU589842185?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=12&type=product&tracking_id=9cdac9b8-fc2f-4350-b740-45adfc588388&wid=MLM916839411&sid=search"
+                            target="_blank"><button type="button"
                                 class="btn btn-dark button-product">Comprar</button></a>
                     </div>
 
@@ -210,7 +211,7 @@
                                 <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
                                         role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
-                                        Precauciones
+                                        Precauciones y Cuidados
                                     </a>
                                 </div>
                                 <div class="collapse" id="collapsePrecauciones">
@@ -271,12 +272,15 @@
                             <li>
                                 <label for="recommendations-slide-4" class="recommendations-text">4</label>
                             </li>
+                            <li>
+                                <label for="recommendations-slide-5" class="recommendations-text">5</label>
+                            </li>
                         </ul>
                         <ul class="recommendations-carousel__slides">
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/1-agite-antes.svg" alt="">
+                                        <img src="../assets/img/reccomendations/1-agita-siempre.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -284,7 +288,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/2-aplique-limpiadora.svg" alt="">
+                                        <img src="../assets/img/reccomendations/2-aplica-espuma-frota.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -292,7 +296,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/3-deje-actuar.svg" alt="">
+                                        <img src="../assets/img/reccomendations/3-deja-actuar-espuma.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -300,7 +304,15 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/4-usa-papel.svg" alt="">
+                                        <img src="../assets/img/reccomendations/4-con-una-toalla.svg" alt="">
+                                    </div>
+
+                                </figure>
+                            </li>
+                            <li class="recommendations-carousel__slide">
+                                <figure>
+                                    <div>
+                                        <img src="../assets/img/reccomendations/5-continua-con-lavado.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -313,7 +325,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tatto Aftercare?
+            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tattoo Aftercare?
             </h2>
             <div class="row">
                 <div class="col-12">
@@ -321,14 +333,16 @@
                         <div class="col-4">
                             <img src="../assets/img/products/tattoo_moist_balm/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/tattoo-moisturizing-balm.html"><button type="button"
-                                        class="btn btn-dark button-product">Balsamo</button></a>
+                                <a href="https://www.mercadolibre.com.mx/kit-con-3-tattoo-moisturizing-balm-balsamo-para-tatuar/up/MLMU569573926?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=7&type=product&tracking_id=f51bfe7e-ef19-40be-bf15-718572663213&wid=MLM1910724443&sid=search"
+                                    target="_blank"><button type="button"
+                                        class="btn btn-dark button-product">Bálsamo</button></a>
                             </div>
                         </div>
                         <div class="col-4">
                             <img src="../assets/img/products/eco_recarga/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/eco-recarga-dermo-clean-foam.html"> <button type="button"
+                                <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-espuma-dermolimpiadora--ecorecarga/up/MLMU589842185?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=12&type=product&tracking_id=9cdac9b8-fc2f-4350-b740-45adfc588388&wid=MLM916839411&sid=search"
+                                    target="_blank"><button type="button"
                                         class="btn btn-dark button-product">Eco</button>
                                 </a>
                             </div>
@@ -336,7 +350,8 @@
                         <div class="col-4">
                             <img src="../assets/img/products/all-red.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/productos.html"> <button type="button" class="btn btn-dark button-product">Ver
+                                <a href="https://listado.mercadolibre.com.mx/pagina/neekdna/#global_position=1"
+                                    target="_blank"><button type="button" class="btn btn-dark button-product">Ver
                                         Todo</button>
                                 </a>
                             </div>
