--- a/producto/eco-recarga-dermo-clean-foam.html
+++ b/producto/eco-recarga-dermo-clean-foam.html
@@ -161,7 +161,8 @@
                             el segundo: fomentar una conciencia ecológica.</p>
                     </div>
                     <div class="row">
-                        <a href="/producto/tattoo-aftercare.html"><button type="button"
+                        <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-espuma-dermolimpiadora--ecorecarga/up/MLMU589842185?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=12&type=product&tracking_id=9cdac9b8-fc2f-4350-b740-45adfc588388&wid=MLM916839411&sid=search"
+                            target="_blank"><button type="button"
                                 class="btn btn-dark button-product">Comprar</button></a>
                     </div>
 
@@ -210,7 +211,7 @@
                                 <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
                                         role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
-                                        Precauciones
+                                        Precauciones y Cuidados
                                     </a>
                                 </div>
                                 <div class="collapse" id="collapsePrecauciones">
@@ -277,7 +278,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/1-agite-recarga.svg" alt="">
+                                        <img src="../assets/img/reccomendations/1-agita-eco.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -285,7 +286,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/2-destape-eco-recarga.svg" alt="">
+                                        <img src="../assets/img/reccomendations/2-destape-eco.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -293,7 +294,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/3-vierta-liquido.svg" alt="">
+                                        <img src="../assets/img/reccomendations/3-vierte-eco.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -301,7 +302,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/4-tape-eco-recarga.svg" alt="">
+                                        <img src="../assets/img/reccomendations/4-tapa-eco.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -314,7 +315,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tatto Aftercare?
+            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tattoo Aftercare?
             </h2>
             <div class="row">
                 <div class="col-12">
@@ -322,22 +323,25 @@
                         <div class="col-4">
                             <img src="../assets/img/products/dermo_clean_foam/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/dermo-clean-foam.html"><button type="button"
+                                <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-espuma-dermolimpiadora--ecorecarga/up/MLMU589842185?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=12&type=product&tracking_id=9cdac9b8-fc2f-4350-b740-45adfc588388&wid=MLM916839411&sid=search"
+                                    target="_blank"><button type="button"
                                         class="btn btn-dark button-product">Espuma</button></a>
                             </div>
                         </div>
                         <div class="col-4">
                             <img src="../assets/img/products/tattoo_moist_balm/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/tattoo-moisturizing-balm.html"> <button type="button"
-                                        class="btn btn-dark button-product">Balsamo</button>
+                                <a href="https://www.mercadolibre.com.mx/kit-con-3-tattoo-moisturizing-balm-balsamo-para-tatuar/up/MLMU569573926?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=7&type=product&tracking_id=f51bfe7e-ef19-40be-bf15-718572663213&wid=MLM1910724443&sid=search"
+                                    target="_blank"> <button type="button"
+                                        class="btn btn-dark button-product">Bálsamo</button>
                                 </a>
                             </div>
                         </div>
                         <div class="col-4">
                             <img src="../assets/img/products/all-red.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/productos.html"> <button type="button" class="btn btn-dark button-product">Ver
+                                <a href="https://listado.mercadolibre.com.mx/pagina/neekdna/#global_position=1"
+                                    target="_blank"> <button type="button" class="btn btn-dark button-product">Ver
                                         Todo</button>
                                 </a>
                             </div>
