--- a/producto/waste-absorbent.html
+++ b/producto/waste-absorbent.html
@@ -160,7 +160,8 @@
                             infecciosos en el área de trabajo y su posterior deshecho.</p>
                     </div>
                     <div class="row">
-                        <a href="/producto/tattoo-aftercare.html"><button type="button"
+                        <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-neekdna-protec-espumabalsamoabsorbente/up/MLMU592273336?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=10&type=product&tracking_id=36227f18-b4a1-4e3f-8a62-04f7515a28e7&wid=MLM916839308&sid=search"
+                            target="_blank"><button type="button"
                                 class="btn btn-dark button-product">Comprar</button></a>
                     </div>
 
@@ -204,7 +205,7 @@
                                 <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
                                         role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
-                                        Precauciones
+                                        Precauciones y Cuidados
                                     </a>
                                 </div>
                                 <div class="collapse" id="collapsePrecauciones">
@@ -276,7 +277,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/1-lava-tus-manos.svg" alt="">
+                                        <img src="../assets/img/reccomendations/1-agrega-waste.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -284,8 +285,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/2-agrega-pequenas-cantidades.svg"
-                                            alt="">
+                                        <img src="../assets/img/reccomendations/2-espera-waste.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -293,7 +293,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/3-espera-hasta-consistencia.svg" alt="">
+                                        <img src="../assets/img/reccomendations/3-solidifica-waste.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -301,7 +301,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/4-mantiene-protegida.svg" alt="">
+                                        <img src="../assets/img/reccomendations/4-desecha-waste.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -314,7 +314,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tatto Aftercare?
+            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tattoo Aftercare?
             </h2>
             <div class="row">
                 <div class="col-12">
@@ -322,14 +322,16 @@
                         <div class="col-4">
                             <img src="../assets/img/products/eco_recarga/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/eco-recarga-dermo-clean-foam.html"><button type="button"
+                                <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-espuma-dermolimpiadora--ecorecarga/up/MLMU589842185?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=12&type=product&tracking_id=9cdac9b8-fc2f-4350-b740-45adfc588388&wid=MLM916839411&sid=search"
+                                    target="_blank"><button type="button"
                                         class="btn btn-dark button-product">Eco</button></a>
                             </div>
                         </div>
                         <div class="col-4">
                             <img src="../assets/img/products/dermo_clean_foam/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/dermo-clean-foam.html"> <button type="button"
+                                <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-espuma-dermolimpiadora--ecorecarga/up/MLMU589842185?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=12&type=product&tracking_id=9cdac9b8-fc2f-4350-b740-45adfc588388&wid=MLM916839411&sid=search"
+                                    target="_blank"> <button type="button"
                                         class="btn btn-dark button-product">Espuma</button>
                                 </a>
                             </div>
@@ -337,7 +339,8 @@
                         <div class="col-4">
                             <img src="../assets/img/products/all-red.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/productos.html"> <button type="button" class="btn btn-dark button-product">Ver
+                                <a href="https://listado.mercadolibre.com.mx/pagina/neekdna/#global_position=1"
+                                    target="_blank"> <button type="button" class="btn btn-dark button-product">Ver
                                         Todo</button>
                                 </a>
                             </div>
