--- a/producto/piercing-aftercare-sol.html
+++ b/producto/piercing-aftercare-sol.html
@@ -162,7 +162,8 @@
                             segura.</p>
                     </div>
                     <div class="row">
-                        <a href="/producto/tattoo-aftercare.html"><button type="button"
+                        <a href="https://www.mercadolibre.com.mx/pack-3-pzs-solucion-de-limpieza-piercing-aftercare-neekdna/up/MLMU3437066295?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=758101b4-9fa0-4a2b-9f7b-37ac6ab43689&wid=MLM4119729188&sid=storefronts&global_position=8"
+                            target="_blank"><button type="button"
                                 class="btn btn-dark button-product">Comprar</button></a>
                     </div>
 
@@ -208,7 +209,7 @@
                                 <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
                                         role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
-                                        Precauciones
+                                        Precauciones y Cuidados
                                     </a>
                                 </div>
                                 <div class="collapse" id="collapsePrecauciones">
@@ -301,7 +302,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/4-piel-limpia.svg" alt="">
+                                        <img src="../assets/img/reccomendations/4-limpia-nuevo.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -314,7 +315,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tatto Aftercare?
+            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tattoo Aftercare?
             </h2>
             <div class="row">
                 <div class="col-12">
@@ -322,7 +323,8 @@
                         <div class="col-4">
                             <img src="../assets/img/products/tattoo_aftercare/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/tattoo-aftercare.html"><button type="button"
+                                <a href="https://www.mercadolibre.com.mx/pack-3-pzs-tattoo--piercing-aftercare/up/MLMU586769629?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=b1908714-36ea-4dbc-bfa0-c4cf67fbb3c4&wid=MLM852422862&sid=storefronts&global_position=8"
+                                    target="_blank"><button type="button"
                                         class="btn btn-dark button-product">Pomada</button></a>
                             </div>
                         </div>
@@ -330,7 +332,8 @@
                             <img src="../assets/img/products/piercing_aftercare_gel/front.png" alt="Image"
                                 class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/piercing-aftercare-gel.html"> <button type="button"
+                                <a href="https://www.mercadolibre.com.mx/kit-neekdna-piercing-aftercare-3-piezas/up/MLMU592282152?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=170ef174-04be-4435-807d-983e63a87943&wid=MLM909975311&sid=storefronts&global_position=8"
+                                    target="_blank"> <button type="button"
                                         class="btn btn-dark button-product">Gel</button>
                                 </a>
                             </div>
@@ -338,7 +341,8 @@
                         <div class="col-4">
                             <img src="../assets/img/products/all-blue.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/productos.html"> <button type="button" class="btn btn-dark button-product">Ver
+                                <a href="https://listado.mercadolibre.com.mx/pagina/neekdna/#global_position=1"
+                                    target="_blank"> <button type="button" class="btn btn-dark button-product">Ver
                                         Todo</button>
                                 </a>
                             </div>
