--- a/producto/tattoo-cleansing-gel.html
+++ b/producto/tattoo-cleansing-gel.html
@@ -158,7 +158,8 @@
                             mejor opción para lavar tu nuevo tatuaje, elimina suciedad, grasa y células muertas.</p>
                     </div>
                     <div class="row">
-                        <a href="/producto/tattoo-aftercare.html"><button type="button"
+                        <a href="https://www.mercadolibre.com.mx/neekdna-gel-limpiador-tatuajes-tattoo-cleansing-kit-3-pzs/up/MLMU3351704298?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=f05e6cfc-91f4-40c1-be96-4af23078e389&wid=MLM2399616701&sid=storefronts&global_position=8"
+                            target="_blank"><button type="button"
                                 class="btn btn-dark button-product">Comprar</button></a>
                     </div>
 
@@ -207,7 +208,7 @@
                                 <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
                                         role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
-                                        Precauciones
+                                        Precauciones y Cuidados
                                     </a>
                                 </div>
                                 <div class="collapse" id="collapsePrecauciones">
@@ -287,7 +288,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/2-aplique-gel.svg" alt="">
+                                        <img src="../assets/img/reccomendations/2-aplica-el-gel-limpiadpr.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -324,7 +325,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tatto Aftercare?
+            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tattoo Aftercare?
             </h2>
             <div class="row">
                 <div class="col-12">
@@ -332,14 +333,16 @@
                         <div class="col-4">
                             <img src="../assets/img/products/tattoo_aftercare/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/tattoo-aftercare.html"><button type="button"
+                                <a href="https://www.mercadolibre.com.mx/pack-3-pzs-tattoo--piercing-aftercare/up/MLMU586769629?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=b1908714-36ea-4dbc-bfa0-c4cf67fbb3c4&wid=MLM852422862&sid=storefronts&global_position=8"
+                                    target="_blank"><button type="button"
                                         class="btn btn-dark button-product">Pomada</button></a>
                             </div>
                         </div>
                         <div class="col-4">
                             <img src="../assets/img/products/skin_tattoo_moist/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/skin-tattoo-moisturiser.html"> <button type="button"
+                                <a href="https://www.mercadolibre.com.mx/tres-cremas-humectantes-para-tatuajes-fps30-tattoo-skincare/up/MLMU569339139?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=6d628afb-3a83-4573-9043-81fbcfa93923&wid=MLM2121026084&sid=storefronts&global_position=8"
+                                    target="_blank"> <button type="button"
                                         class="btn btn-dark button-product">Crema</button>
                                 </a>
                             </div>
@@ -347,7 +350,8 @@
                         <div class="col-4">
                             <img src="../assets/img/products/all.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/productos.html"> <button type="button" class="btn btn-dark button-product">Ver
+                                <a href="https://listado.mercadolibre.com.mx/pagina/neekdna/#global_position=1"
+                                    target="_blank"> <button type="button" class="btn btn-dark button-product">Ver
                                         Todo</button>
                                 </a>
                             </div>
