--- a/producto/tattoo-moisturizing-balm.html
+++ b/producto/tattoo-moisturizing-balm.html
@@ -146,7 +146,7 @@
                             </h>
                     </div>
                     <div class="row">
-                        <h3 class="product-details-subtitle">Pomada Humectante para después de tatuarse
+                        <h3 class="product-details-subtitle">Bálsamo Humectante para después de tatuarse
                         </h3>
                     </div>
                     <div class="row">
@@ -161,7 +161,8 @@
                             penetren más facilmente en la piel.</p>
                     </div>
                     <div class="row">
-                        <a href="/producto/tattoo-aftercare.html"><button type="button"
+                        <a href="https://www.mercadolibre.com.mx/kit-con-3-tattoo-moisturizing-balm-balsamo-para-tatuar/up/MLMU569573926?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=7&type=product&tracking_id=f51bfe7e-ef19-40be-bf15-718572663213&wid=MLM1910724443&sid=search"
+                            target="_blank"><button type="button"
                                 class="btn btn-dark button-product">Comprar</button></a>
                     </div>
 
@@ -212,7 +213,7 @@
                                 <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
                                         role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
-                                        Precauciones
+                                        Precauciones y Cuidados
                                     </a>
                                 </div>
                                 <div class="collapse" id="collapsePrecauciones">
@@ -277,7 +278,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/1-lava-tus-manos.svg" alt="">
+                                        <img src="../assets/img/reccomendations/1-toma-un-poco-balsamo.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -285,7 +286,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/2-aplique-sobre-la-zona.svg" alt="">
+                                        <img src="../assets/img/reccomendations/2-humecta-balsamo.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -293,7 +294,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/3-extienda-suavemente.svg" alt="">
+                                        <img src="../assets/img/reccomendations/3-cada-que-limpies.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -301,7 +302,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/4-mantiene-protegida.svg" alt="">
+                                        <img src="../assets/img/reccomendations/4-tatuaje-finalizado.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -314,7 +315,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tatto Aftercare?
+            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tattoo Aftercare?
             </h2>
             <div class="row">
                 <div class="col-12">
@@ -322,14 +323,16 @@
                         <div class="col-4">
                             <img src="../assets/img/products/dermo_clean_foam/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/dermo-clean-foam.html"><button type="button"
+                                <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-espuma-dermolimpiadora--ecorecarga/up/MLMU589842185?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=12&type=product&tracking_id=9cdac9b8-fc2f-4350-b740-45adfc588388&wid=MLM916839411&sid=search"
+                                    target="_blank"><button type="button"
                                         class="btn btn-dark button-product">Espuma</button></a>
                             </div>
                         </div>
                         <div class="col-4">
                             <img src="../assets/img/products/waste_absorbent/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/waste-absorbent.html"> <button type="button"
+                                <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-neekdna-protec-espumabalsamoabsorbente/up/MLMU592273336?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=10&type=product&tracking_id=36227f18-b4a1-4e3f-8a62-04f7515a28e7&wid=MLM916839308&sid=search"
+                                    target="_blank"> <button type="button"
                                         class="btn btn-dark button-product">Absorbente</button>
                                 </a>
                             </div>
@@ -337,7 +340,8 @@
                         <div class="col-4">
                             <img src="../assets/img/products/all-red.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/productos.html"> <button type="button" class="btn btn-dark button-product">Ver
+                                <a href="https://listado.mercadolibre.com.mx/pagina/neekdna/#global_position=1"
+                                    target="_blank"> <button type="button" class="btn btn-dark button-product">Ver
                                         Todo</button>
                                 </a>
                             </div>
